Changes
=======

This documents changes as they are made.  Note that if you received this file
via CVS the version of the first entry is the forthcoming version number.

0.38
--------------------
- Added SET VOLUME command
- Fixed HELP SET syntax display
- Increased space for album/track by one (now 7 characters instead of 6) in
  display
- Added xmp to default configuration

0.37 - Aug 24th 2003
--------------------
- Changed to using execvp so PATH will effect the search for players
- Gap between songs is now an exact number of silence bytes, making it
  possible for Mserv to have no gap at all (useful for mixes)
- GAP now takes a floating point number
- Default configuration is now mostly commented out
- Split concept of currently decoding song and currently playing song so
  user's view of playing song can be independent of spawned player
- Completely re-worked pausing and stopping - now uses silence in the output
  routines rather than using unix signals to suspend play
- Created global.h for main structures

0.36 - Aug 9th 2003
-------------------
- Split output into modular compilation
- Added Icecast 2 streaming with libshout, libvorbisenc!
- Added configuration options for Icecast mount point and bitrate

0.35 - Aug 4th 2003
-------------------
- Added automake/autoheader facilities and moved to central configure
  script rather than 3 separate ones
- Moved to using libtool, added shared library for libmservcli
- Fixed VOLUME with multiple -s or +s saying Invalid Number occasionally
- Add ogg123 to default configuration

0.34 - Jul 28th 2003
--------------------
- Switched volume setting from global mixer to PCM, from Conrad Wood
  <cnw@conradwood.net>
- Applied patch from NetBSD distribution (unknown author) to read contents
  of ID3v2 header (and thanks to Paul Hampson for his related patch)
- Fixed header include bugs (time, random errors, etc.)
- Fix mservedit so it handles an editor with arguments, patch from
  Nick <nwp@lemon-computing.com>